# libcamera-rs

./: .gitignore
libcamera/: Cargo.toml  build.rs
libcamera-meta/: Cargo.toml  README.md
libcamera-meta/src/: control_ids.yaml  property_ids.yaml
libcamera-sys/: Cargo.toml  build.rs
libcamera-sys/c_api/: camera.cpp  camera.h  controls.cpp  controls.h  controls_generated.h  libcamera_ids.hpp  version.h
libcamera/src/: camera.rs  control_value.rs  generated.rs
libcamera/versioned_files/0.0.2/: controls.rs
libcamera/versioned_files/0.0.3/: properties.rs
libcamera/versioned_files/0.0.4/: controls.rs
libcamera/versioned_files/0.1.0/: control_types.rs  controls.rs  properties.rs
libcamera/versioned_files/0.2.0/: controls.rs
libcamera/versioned_files/0.3.0/: controls.rs
libcamera/versioned_files/0.3.1/: controls.rs
libcamera/versioned_files/0.3.2/: controls.rs
libcamera/versioned_files/0.4.0/: control_types.rs  controls.rs
libcamera/versioned_files/0.5.0/: controls.rs  properties.rs
